# xsesame

./: .editorconfig  Cargo.toml  Readme.md  run  test-run
cli/: Cargo.toml
cli/src/: enable_disable.rs  list_sessions.rs  main.rs  opts.rs  tools.rs
core/: Cargo.toml
core/src/: collect.rs  desktop_info.rs  lib.rs  to_json.rs
gtk/: Cargo.toml
gtk/src/: main.rs  opts.rs  xsesame.ui
gtk/src/gui/: mod.rs  window.rs
src/: cmdline_opts.rs  desktop_info.rs  main.rs  opts.rs
src/cli/: commands.rs  enable_disable.rs  list_sessions.rs  mod.rs  toggle.rs  toggle_rs.rs  utils.rs
src/cli/cmd/: completion.rs  disable.rs  enable.rs  export.rs  list.rs  mod.rs  toggle.rs
src/core/: collect.rs  get_sessions.rs  mod.rs  session_info.rs  to_json.rs  toggle.rs  tools.rs  utils.rs
src/desktop_info/: collect.rs  mod.rs  to_json.rs
test/: test_list.sh  test_toogle.sh
test/all/: Invalid2.desktop-invalid  Invalid_notApp.desktop  LXDE.desktop  budgie-desktop.desktop  pop.desktop
test/invalids/: Invalid_noname.desktop  inv_only_name.desktop-invalid
test/samples/: Invalid1.desktop  Invalid2.desktop  Invalid_notApp2.desktop  Invalid_ro.desktop  LXDE.desktop  Readme.md  budgie-desktop.desktop  cinnamon.desktop  cinnamon2d.desktop  cinnamon2d.desktop-disable  plasma.desktop  pop.desktop
xsesame/: Cargo.toml
xsesame/src/: main.rs
