[package]
name = "xsesame"
version = "0.1.0"
authors = ["Giannis Tsagkatakis <jtsagata@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.123"
serde_json = "1.0"
systemd = "0.8.2"
colored = "2.0.0"
stybulate = "1.1.1"
clap = "2.33.3"
exec = "0.3.1"
nix = "0.19.1"
terminal_size = "0.1.16"
freedesktop_entry_parser = "1.1.1"
regex = "1.4.3"
env-lang = "1.0.0"
