[package]
name = "xsesame"
version = "0.1.0"
authors = ["Giannis Tsagkatakis <jtsagata@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.123"
serde_json = "1.0"
systemd = "0.8.2"
colored = "2.0.0"
clap = "2.33.3"
exec = "0.3.1"
nix = "0.19.1"
terminal_size = "0.1.16"
freedesktop_entry_parser = "1.1.1"
regex = "1.4.3"
pad = "0.1.6"
human-panic = "1.0.3"
better-panic = "0.2.0"
locale_config = "0.3.0"
itertools = "0.10.0"
figures-rs = "0.0.1"
unicode-segmentation = "1.7.1"
atty = "0.2.14"
exit-code = "1.0.0"
