[package]
name = "xsesame"
version = "0.1.0"
authors = ["Giannis Tsagkatakis <tsagatakis@protonmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
systemd = "0.8"
colored = "2.0"
clap = "2.33"
exec = "0.3"
terminal_size = "0.1"
freedesktop_entry_parser = "1.1"
regex = "1.4"
human-panic = "1.0"
better-panic = "0.2"
locale_config = "0.3"
itertools = "0.10"
figures-rs = "0.0.1"
unicode-segmentation = "1.7"
atty = "0.2"
exit-code = "1.0"
