[package]
name = "xsesame-gtk"
version = "0.1.0"
authors = ["Giannis Tsagkatakis <jtsagata@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
colored = "2.0.0"
human-panic = "1.0.3"
nix = "0.19.1"

gtk = "^0.9.0"
relm = "^0.21.0"
glib = "^0.10.0"
relm-derive = "^0.21.0"

[dependencies.xsesame-core]
path = "../core"

